# halo2-fri-gadget

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs
src/fields/: fp.rs  fp2.rs  mod.rs
src/fri/: mod.rs  tests.rs
src/hash/: mod.rs
src/hash/poseidon64_256/: mod.rs
src/hash/poseidon_bn254/: chip.rs  mod.rs
src/hash/poseidon_fp64/: chip.rs  mod.rs
src/merkle/: mod.rs
src/random/: mod.rs
src/tests/winter/: mod.rs
src/tests/winter/channel/: mod.rs
src/tests/winter/field/: mod.rs
src/tests/winter/field/bn254/: mod.rs  u256.rs  u512.rs
src/tests/winter/hash/: mod.rs
src/tests/winter/hash/poseidon/: mod.rs  param.rs  poseidon.rs
src/tests/winter/hash/poseidon_bn254/: mod.rs
src/tests/winter/hash/poseidon_fp64/: mod.rs
tests/: fri.rs
