[package]
name = "halo2-fri-gadget"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
goldilocks = { path = "../halo2-ce/arithmetic/goldilocks" }
#halo2_proofs = { git = "https://github.com/maxgillett/halo2-ce", branch = "halo2_fri" }
halo2_proofs = { path = "../halo2-ce/halo2_proofs" }
#halo2_base = { git = "https://github.com/maxgillett/halo2-base", branch = "halo2_fri" }
halo2_base = { path = "../halo2-base" }
unroll = "0.1.5"
log = "0.4.17"
lazy_static = "1.4.0"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
winter-fri = { git = "https://github.com/facebook/winterfell.git" }
winter-math = { git = "https://github.com/facebook/winterfell.git" }
winter-crypto = { git = "https://github.com/facebook/winterfell.git" }
winter-utils = { git = "https://github.com/facebook/winterfell.git" }
poseidon = { git = "https://github.com/maxgillett/poseidon", branch = "halo2_fri" }
ff = "0.12.0"
uint = "0.9.3"
serde = { version = "1.0", default-features = false }
itertools = "0.10.5"
hex = "0.4.3"
env_logger = "0.10.0"
rand = "0.8.5"
