[package]
name = "halo2-fri-gadget"
version = "0.2.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
halo2_proofs = { git = "https://github.com/maxgillett/halo2-ce", branch = "feat/goldilocks" }
curves = { git = "https://github.com/maxgillett/halo2-ce", branch = "feat/goldilocks" }
pasta_curves = { git = "https://github.com/maxgillett/halo2-ce", branch = "feat/goldilocks" }
goldilocks = { git = "https://github.com/maxgillett/halo2-ce", branch = "feat/goldilocks" }

halo2-base = { git = "https://github.com/maxgillett/halo2-lib", branch = "feat/invert", features = ["display"] }

poseidon = { git = "https://github.com/maxgillett/poseidon", branch = "feat/goldilocks" }

ff = "0.12.0"
unroll = "0.1.5"
log = "0.4.17"
lazy_static = "1.4.0"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
winter-fri = { git = "https://github.com/maxgillett/winterfell.git", tag = "v0.4.2-patched" }
winter-math = { git = "https://github.com/maxgillett/winterfell.git", tag = "v0.4.2-patched" }
winter-crypto = { git = "https://github.com/maxgillett/winterfell.git", tag = "v0.4.2-patched" }
winter-utils = { git = "https://github.com/maxgillett/winterfell.git", tag = "v0.4.2-patched" }

uint = "0.9.3"
serde = { version = "1.0", default-features = false }
itertools = "0.10.5"
hex = "0.4.3"
env_logger = "0.10.0"
rand = "0.8.5"
